<resources>
    <string name="app_name">MevadaPLY</string>
    <string name="title_activity_welcome">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Hyphen">-</string>
    <string name="pointDesc">Points</string>
    <string name="design_trends">Design Trends</string>
    <string name="redeem">Redeem</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="edit_profile_pic">Edit Profile Pic</string>
    <string name="email_id">Email ID</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="update">Update</string>
    <string name="date">Date</string>
    <string name="desc">Description</string>
    <string name="type">Type</string>
    <string name="Points">Points</string>
    <string name="mobile_number">Mobile Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="images">Images</string>
    <string name="company_name">Mevada PLY</string>
    <string name="company_details">+918735041358\nwww.mevadaply.com</string>
    <string name="company_logo">Company Logo</string>
    <string name="btn_view">View</string>
    <string name="design_image">Design Image</string>
    <string name="close">Close</string>

</resources>
