<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sahilj.mevadaply.ContainerActivity">

    <LinearLayout
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desc"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/Points"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textSize="16sp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvHistoryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
