<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserProfileActivity">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimaryDark" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgUserProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_person_black_24dp"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#ce000000"
        app:civ_shadow_radius="10" />

    <TextView
        android:id="@+id/tvProPic"
        android:layout_below="@id/imgUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_pic"
        android:layout_centerHorizontal="true"
        android:textSize="12sp" />
    <LinearLayout
        android:id="@+id/llName"
        android:layout_below="@id/tvProPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="textPersonName|textCapWords"
            android:nextFocusDown="@id/etLastName"
            android:selectAllOnFocus="true"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textPersonName|textCapWords"
            android:nextFocusDown="@id/etEmail"
            android:selectAllOnFocus="true"/>

    </LinearLayout>

    <!--<EditText
        android:id="@+id/etMobileNumber"
        android:layout_below="@id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:focusable="false"
        android:clickable="false"
        android:onClick="changeNumber"
        android:textColor="@android:color/black"/>-->

    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/etArea"
        android:selectAllOnFocus="true"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp" />

    <LinearLayout
        android:id="@+id/llArea"
        android:layout_below="@id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/area"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true"
            android:nextFocusDown="@id/etCity"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_home_black_24dp"
            android:drawableLeft="@drawable/ic_home_black_24dp" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/city"
            android:inputType="textCapWords"
            android:nextFocusDown="@id/btnUpdate"
            android:selectAllOnFocus="true"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="@drawable/roundedbutton"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true" />
        <ProgressBar
            android:id="@+id/pbUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:drawableTop="@drawable/ic_account_balance_black_24dp"
        android:gravity="center"
        android:text="@string/company_details" />

</RelativeLayout>
