<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Welcome"
    tools:showIn="@layout/app_bar_welcome"
    android:orientation="vertical">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimaryDark" />
        <!--<ImageView

            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="37dp"
            android:layout_marginStart="32dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_person_black_24dp"
            android:background="@color/colorAccent"
            android:padding="5dp"/>-->
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="#ce000000"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/Hyphen"
            android:textSize="24sp"
            android:layout_below="@id/imgUserProfile"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/Hyphen"
            android:textSize="16sp"
            android:layout_below="@id/tvName"
            android:layout_marginStart="16dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp" />
    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hyphen"
        android:textSize="50sp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_below="@id/tvArea"/>

    <TextView
        android:id="@+id/tvPointType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pointDesc"
        android:textSize="25sp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:layout_below="@id/tvPoints"/>

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Spend Your Credit"
        android:textSize="25sp"
        android:drawableStart="@drawable/ic_local_grocery_store_black_24dp"
        android:drawableLeft="@drawable/ic_local_grocery_store_black_24dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPointType">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/design_trends"
            android:drawableStart="@drawable/ic_color_lens_black_24dp"
            android:onClick="showDesignTrends"
            android:drawableLeft="@drawable/ic_color_lens_black_24dp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/redeem"
            android:drawableStart="@drawable/ic_local_grocery_store_black_24dp"
            android:drawableLeft="@drawable/ic_local_grocery_store_black_24dp"
            android:onClick="showRedeemOffers"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_details"
        android:drawableTop="@drawable/ic_account_balance_black_24dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
